--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -37,24 +37,120 @@
     	-moz-transition: .5s;
     	transition: .5s;
     }
-	.col-lg-12{
-		padding-left: 0;
-		padding-right: 0;
-	}
+    .col-lg-12, .col-lg-2, .col-lg-4{
+    	padding-left: 0;
+    	padding-right: 0;
+    }
+    .h1 h1{
+    	font-size: 36px;
+    }
+    .stuck nav{
+    	position: fixed;
+    	top: 0;
+    	left: 0;
+    	right: 0;
+    }
     /*---------- end !important ---------*/
     /*--------- header ---------*/
-	#header{
-		/*background-color: #333;*/
-		padding: 7px;
+    #header{
+    	/*background-color: #333;*/
+    	padding: 7px;
+    }
+    .left__content{
+    	float: left;
+    }
+    .right__content{
+    	float: right;
+    	justify-content: center;
+    }
+    .right__content ul li{
+    	display: inline;
+    }
+    /*---------- End Header ---------*/
+    #section__1{
+    	background-color: #e6e6e6 !important;
+    }
+    .about__us{
+    	text-align: center;
+    	margin: 10px;
+    	padding-top: 25px;
+    }
+    .about__us p{
+    	font-size: 20px;
+    	text-align: justify;
+    	padding: 0 40px 0;
+    }
+    .about__us hr{
+    	margin-left: 45px;
+    	margin-right: 45px;
+    	background-color: #333;
+    }
+
+    .span span{
+    	color: #ff0000
+    }
+    .image__container a{
+    	color: #000;
+    }
+
+    /*--------- Image Container ---------*/
+
+    .container__image {
+    	position: relative;
+    	overflow: hidden;
+    	margin: 1px;
+    }
+    .container__image img{
+    	width: 100%;
+    	-webkit-transition: all .5s;
+    	transition: all .5s;
+    	-webkit-transform: scale(1.25) rotate(4deg);
+    	transform: scale(1.25) rotate(4deg);
+    }
+    .container__image:hover img{
+    	-webkit-transform: scale(1);
+    	transform: scale(1);
+
+    }
+
+    .image {
+    	display: block;
+    	width: 100%;
+    	height: auto;
+    }
+
+    .overlay {
+    	position: absolute; 
+    	bottom: 0; 
+    	top: 0;
+    	background: rgb(0, 0, 0);
+    	background: rgba(0, 0, 0, 0.7); /* Black see-through */
+    	color: #f1f1f1; 
+    	width: 100%;
+    	transition: .5s ease;
+    	opacity:0;
+    	color: white;
+    	font-size: 20px;
+    	text-align: center;
+    	padding: 0 20px;
+    	-webkit-transition: .8s;
+    	font-weight: 900;
+    }
+
+    .container__image:hover .overlay {
+    	opacity: 1;
+    	padding: 40px 20px;
+    }
+    .overlay h4{
+    	color: #ff0000;
+    	-webkit-transition: .8s;
+    }
+    /*--------- End Image Container ---------*/
+
+    /*---------  Section__2 ---------*/
+	
+	#section__2{
+		text-align: center;
+		padding-top: 20px;
 	}
-	.left__content{
-		float: left;
-	}
-	.right__content{
-		float: right;
-		justify-content: center;
-	}
-	.right__content ul li{
-		display: inline;
-	}
-	/*---------- End Header ---------*/
+    /*--------- End Section__2 ---------*/
